@@ -1,3 +1,4 @@
+- Allow translating the error message through a new lexicon [#3]
 - Update paragonie/random_compat to 2.0.21
 
 CSRF Helper 1.0.0-pl
